# pluginkit

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  CONTRIBUTING.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/rulesets/: README.md  require-signed-commits.json
.github/workflows/: ci.yml  docs.yml  release.yml  rulesets.yml
api-reference/: index.html
benchmarks/: README.md  bench.py
concepts/calling-conventions/: index.html
concepts/overview/: index.html
concepts/plugin-manager/: index.html
concepts/specs-and-impls/: index.html
cookbook/: index.html
cookbook/click/: index.html
cookbook/fastapi/: index.html
cookbook/pytest/: index.html
docs/: api-reference.md  index.md
docs/concepts/: calling-conventions.md  overview.md  plugin-manager.md  specs-and-impls.md
docs/cookbook/: click.md  fastapi.md  index.md  pytest.md
docs/integrations/: click.md  fastapi.md  pytest.md
docs/mechanisms/: direct.md  entrypoints.md  firstresult.md  historic.md  ordering.md  pipeline.md  wrappers.md
docs/production/: async.md  benchmarks.md  hardening.md  lifecycle.md  vs-pluggy.md
examples/: README.md  async_fetch.py  validation_rules.py
examples/cookbook/: README.md  app_lifecycle.py  cli_app.py  fastapi_app.py  notification_router.py  pytest_plugin.py
examples/external-plugin/: README.md  pyproject.toml
examples/external-plugin/src/smoothie_extra/: __init__.py
examples/integrations/: README.md  cli_app.py  fastapi_app.py  pytest_plugin.py
examples/recipes/: README.md  app_lifecycle.py  async_fetch.py  notification_router.py  quickstart.py  report_builder.py  text_pipeline.py  validation_rules.py
examples/tour/: README.md  pyproject.toml
examples/tour/src/pluginkit_tour/: __init__.py  cli.py  demo_01_direct.py  demo_02_firstresult.py  demo_03_ordering.py  demo_04_wrapper.py  demo_05_historic.py  demo_06_entrypoints.py  markers.py  points.py
examples/tour/src/pluginkit_tour/contrib/: honey.py
mechanisms/direct/: index.html
mechanisms/entrypoints/: index.html
mechanisms/firstresult/: index.html
mechanisms/historic/: index.html
mechanisms/ordering/: index.html
mechanisms/pipeline/: index.html
mechanisms/wrappers/: index.html
plugins/smoothie-extra/src/smoothie_extra/: __init__.py
production/async/: index.html
production/hardening/: index.html
production/lifecycle/: index.html
production/vs-pluggy/: index.html
search/: search_index.json
src/pluginkit/: __init__.py  aio.py  exceptions.py  manager.py  markers.py
tests/: test_examples.py  test_framework.py  test_regressions.py  test_tour.py  test_typing.py
tour/: README.md  pyproject.toml
tour/src/pluginkit_tour/: __init__.py  demo_02_firstresult.py  demo_05_historic.py  hookspecs.py  markers.py
tour/src/pluginkit_tour/contrib/: __init__.py
