[project]
name = "pluginkit"
version = "0.1.0"
description = "A small, dependency-free plugin framework: hook specs, entry-point discovery, and sync/async dispatch"
readme = "README.md"
authors = [{ name = "Morten Hansen", email = "morten@winterop.com" }]
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.13"
keywords = ["plugins", "hooks", "protocol", "entry-points"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
# The library itself has ZERO runtime dependencies (standard library only).
dependencies = []

[project.urls]
Homepage = "https://github.com/winterop-com/pluginkit"
Repository = "https://github.com/winterop-com/pluginkit"
Issues = "https://github.com/winterop-com/pluginkit/issues"
Documentation = "https://winterop-com.github.io/pluginkit"

[dependency-groups]
dev = [
  "mypy>=1.20.2",
  "pyright>=1.1.409",
  "ruff>=0.15.12",
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.7.6",
  "mkdocstrings[python]>=1.0.4",
  "pluginkit-tour",  # the walkthrough host, for tour tests and the docs API page
  "smoothie-extra",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = ["tour", "plugins/*"]

[tool.uv.sources]
pluginkit-tour = { workspace = true }
smoothie-extra = { workspace = true }

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
fixable = ["ALL"]
select = ["E", "W", "F", "I", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]
"**/__init__.py" = ["D104"]
"src/**/*.py" = ["D105", "D107"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["examples"]
norecursedirs = [".git", ".venv", "__pycache__"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
strict_equality = true
mypy_path = ["src", "tour/src", "examples"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
# Tests define inline hook specs whose bodies are intentionally empty.
disable_error_code = ["empty-body"]

# Hook specs are intentionally empty (signature + docstring only).
[[tool.mypy.overrides]]
module = "pluginkit_tour.hookspecs"
disable_error_code = ["empty-body"]

[tool.pyright]
include = ["src", "tests", "examples", "tour/src"]
extraPaths = ["examples", "tour/src"]
exclude = ["**/.venv"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportPrivateUsage = false
reportUnusedFunction = false
reportMissingModuleSource = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnknownLambdaType = false
reportMissingTypeArgument = false
