[project]
name = "pluginkit"
version = "0.4.0"
description = "A strictly-typed, generics-first plugin framework for Python 3.13: hooks with derived return types"
readme = "README.md"
authors = [{ name = "Morten Hansen", email = "morten@winterop.com" }]
license = { text = "MIT" }
requires-python = ">=3.13"
keywords = ["plugins", "hooks", "protocol", "entry-points"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
# The library itself has ZERO runtime dependencies (standard library only).
dependencies = []

[project.urls]
Homepage = "https://github.com/winterop-com/pluginkit"
Repository = "https://github.com/winterop-com/pluginkit"
Issues = "https://github.com/winterop-com/pluginkit/issues"
Documentation = "https://winterop-com.github.io/pluginkit"

[dependency-groups]
dev = [
  "mypy>=1.20.2",
  "pyright>=1.1.409",
  "ruff>=0.15.12",
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "fastapi>=0.115.0",  # for the FastAPI integration example
  "httpx>=0.28.0",  # TestClient for the FastAPI example test
  "uvicorn>=0.34.0",  # to serve the FastAPI example
  "click>=8.1.0",  # for the Click CLI integration example
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.7.6",
  "mkdocstrings[python]>=1.0.4",
  "pluginkit-tour",  # the walkthrough host, for tour tests and the docs API page
  "smoothie-extra",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = ["examples/tour", "examples/external-plugin"]

[tool.uv.sources]
pluginkit-tour = { workspace = true }
smoothie-extra = { workspace = true }

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
fixable = ["ALL"]
select = ["E", "W", "F", "I", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]
"**/__init__.py" = ["D104"]
"src/**/*.py" = ["D105", "D107"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["examples/cookbook"]
norecursedirs = [".git", ".venv", "__pycache__"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
strict_equality = true
mypy_path = ["src", "examples/tour/src", "examples/cookbook"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
# Tests define inline hook specs whose bodies are intentionally empty.
disable_error_code = ["empty-body"]

# Hook specs are intentionally empty (signature + docstring only).
[[tool.mypy.overrides]]
module = "pluginkit_tour.points"
disable_error_code = ["empty-body"]

[tool.pyright]
include = ["src", "tests", "examples/cookbook", "examples/tour/src"]
extraPaths = ["examples/cookbook", "examples/tour/src"]
exclude = ["**/.venv"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportPrivateUsage = false
reportUnusedFunction = false
reportMissingModuleSource = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnknownLambdaType = false
reportMissingTypeArgument = false
